corrected the naming of some environment variables

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@ API_VERSION=0.0.1
 MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_USER=spring
-MYSQL_PASS=spring
-MYSQL_DB=spring
+MYSQL_PASSWORD=spring
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=spring
 MYSQL_SCHEMA=never
 
 # Kafka
